# wc2026

./: .gitignore  INSTALL.md  README.md  findings.md  index.html  manifest.json  progress.md  pyproject.toml  task_plan.md
.github/workflows/: update.yml
data/: wc2026.db
public/: index.html  manifest.json  sw.js
scripts/: audit_teams.py  fetch_odds.py  generate_icons.py  init_db.py  load_fixtures.py  load_history.py  predict.py  render.py  update_results.py
templates/: index.html.j2
tests/: test_db.py  test_divergence.py  test_elo.py  test_fetch_odds.py  test_market.py  test_poisson.py  test_render.py  test_stats.py  test_team_mapping.py
wc2026/: api.py  db.py  elo.py  i18n.py  market.py  odds_api.py  poisson.py  team_mapping.py  team_names_cn.py
