[project]
name = "wc2026"
version = "0.1.0"
description = "2026 World Cup match predictor"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "scipy>=1.13",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["wc2026"]
